Gizmo crash when change mode when rotate tool activate #56707

Closed
opened 2018-09-06 16:12:05 +02:00 by Antonio Vazquez · 4 comments

Windows 64 bits - Last version compiled with source code of 06/09/2018 16:00 CET

When change mode with the rotate tool enabled, you get a crash or weird results.

  1. Start blender with --factory-startup.
  2. Add a new grease pencil stroke object.
  3. Select rotate tool.
  4. Change to draw mode
  5. Crash

Extract of the crash log:

23: BLI_system_backtrace - 0x81C5A4E0
22: WM_toolsystem_ref_from_context - 0x803606C0
21: WM_toolsystem_runtime_from_context - 0x80360B70
20: WIDGETGROUP_gizmo_poll - 0x805FB110
19: WM_gizmo_group_type_poll - 0x803AB8D0
18: gizmomap_prepare_drawing - 0x803A3340

Windows 64 bits - Last version compiled with source code of 06/09/2018 16:00 CET When change mode with the rotate tool enabled, you get a crash or weird results. 1) Start blender with --factory-startup. 2) Add a new grease pencil stroke object. 3) Select rotate tool. 4) Change to draw mode 5) Crash Extract of the crash log: ``` 23: BLI_system_backtrace - 0x81C5A4E0 22: WM_toolsystem_ref_from_context - 0x803606C0 21: WM_toolsystem_runtime_from_context - 0x80360B70 20: WIDGETGROUP_gizmo_poll - 0x805FB110 19: WM_gizmo_group_type_poll - 0x803AB8D0 18: gizmomap_prepare_drawing - 0x803A3340 ```
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Campbell Barton was assigned by Antonio Vazquez 2018-09-06 16:12:45 +02:00
Author
Member

Campbell,, I think this is for you.

Campbell,, I think this is for you.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 066afa2198

This issue was referenced by 066afa219839b6953c1cb6a0b1ba3c35002bc7a2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56707
No description provided.