Fix T56707: Assert changing grease pencil modes